--- a/deno.json
+++ b/deno.json
@@ -18,9 +18,11 @@
     "proseWrap": "preserve"
   },
   "tasks": {
-    "start": "deno run --allow-net --allow-env main.js",
-    "dev": "deno run --allow-net --allow-env --watch main.js",
-    "test": "deno test --allow-net tests/"
+    "start": "deno run -A main.ts",
+    "dev": "deno run -A --watch main.ts",
+    "test": "deno test -A test/",
+    "format": "deno fmt",
+    "lint": "deno lint"
   },
   "imports": {
     "axios": "https://deno.land/x/axiod@0.26.2/mod.ts",
